--- a/app/clients/static/clients.css
+++ b/app/clients/static/clients.css
@@ -1,8 +1,4 @@
 
-.table {
-    margin: auto;
-}
-
 .is-success {
     font-weight: bold;
 }
@@ -11,3 +7,16 @@
     max-width: 18rem;
     justify-content: left;
 }
+
+.dropdown {
+    width: 100%;
+}
+.dropdown-trigger {
+    width: 100%
+}
+
+.dropdown-menu {
+    width: 100%;
+}
+
+
