--- a/app/clients/templates/_client_appointment_item.html
+++ b/app/clients/templates/_client_appointment_item.html
@@ -1,36 +1,34 @@
-{% macro appointment_timeline_item(appointment) %}
+{% macro client_appointment_item(appointment) %}
     <div class="field has-addons has-addons-centered">
 
         <div class="control is-overlay">
             <a class="button is-small is-link"
                href="{{ url_for('appointments_bp.an_appointment', appointment_id = appointment.id) }}">
+                <span class="icon"><i class="fas fa-calendar"></i></span>
+                <span>   {{ appointment.time_of_appointment.strftime('%d/%m/%Y') }}</span>
                 <span class="icon"><i class="fas fa-clock"></i></span>
-                <span>   {{ appointment.time_of_appointment.strftime('%H:%M') }}</span>
+                <span>{{ appointment.time_of_appointment.strftime('%H:%M') }}</span>
             </a>
         </div>
         <div class="control is-expanded is-overlay control-name-and-tel">
             <a class="button is-rounded is-outlined is-fullwidth is-small control-name-and-tel"
                href="{{ url_for('appointments_bp.an_appointment',appointment_id = appointment.id) }}">
-                <span class="icon"><i class="fas fa-user"></i></span>
-                <span>{{ appointment.client.name }}</span>
+                <span>SMSi:</span>
             </a>
         </div>
         <div class="control tooltip">
             {% if appointment.now_sms %}
-                {% for sent_sms in appointment.sent_texts %}
-                    {% if sent_sms.sms_type_id == 1 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
-                            <span class="icon"><i class="fas fa-check"></i></span>
-                        </a>
-                        <span class="tooltiptext">Takojšnji SMS prejet.</span>
-                    {% endif %}
-                {% endfor %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 1 %}
                         <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">Takojšnji SMS še ni bil prejet.</span>
+                        <span class="tooltiptext">Takojšnji SMS še ni bil poslan.</span>
+                    {% else %}
+                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                            <span class="icon"><i class="fas fa-check"></i></span>
+                        </a>
+                        <span class="tooltiptext">Takojšnji SMS poslan.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
@@ -42,20 +40,17 @@
         </div>
         <div class="control tooltip">
             {% if appointment.same_day_sms %}
-                {% for sent_sms in appointment.sent_texts %}
-                    {% if sent_sms.sms_type_id == 2 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
-                            <span class="icon"><i class="fas fa-check"></i></span>
-                        </a>
-                        <span class="tooltiptext">SMS na dan termina prejet.</span>
-                    {% endif %}
-                {% endfor %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 2 %}
                         <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">SMS na dan termina še ni prejet.</span>
+                        <span class="tooltiptext">SMS na dan termina še ni poslan.</span>
+                    {% else %}
+                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                            <span class="icon"><i class="fas fa-check"></i></span>
+                        </a>
+                        <span class="tooltiptext">SMS na dan termina poslan.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
@@ -67,20 +62,18 @@
         </div>
         <div class="control tooltip">
             {% if appointment.day_before_sms %}
-                {% for sent_sms in appointment.sent_texts %}
-                    {% if sent_sms.sms_type_id == 3 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
-                            <span class="icon"><i class="fas fa-check"></i></span>
-                        </a>
-                        <span class="tooltiptext">SMS dan pred terminom prejet.</span>
-                    {% endif %}
-                {% endfor %}
+                {% if any(unsent_sms.sms_type_id == 3 for ) %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 3 %}
                         <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">SMS dan pred terminom še ni prejet.</span>
+                        <span class="tooltiptext">SMS dan pred terminom še ni poslan.</span>
+                    {% elif unsent_sms.sms_type_id > 4 %}
+                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                            <span class="icon"><i class="fas fa-check"></i></span>
+                        </a>
+                        <span class="tooltiptext">SMS dan pred terminom poslan.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
@@ -99,13 +92,10 @@
             </a>
         </div>
         <div class="control">
-            <a class="button is-danger is-rounded is-small"
-               href="{{ url_for('clients_bp.clients') }}"
+            <a class="button is-danger is-small"
+               href="{{ url_for('appointments_bp.delete_appointment', appointment_id=appointment.id) }}"
                onclick="return confirm('As zihr?');">
-          <span class="icon is-small">
-            <i class="far fa-trash-alt"></i>
-          </span>
-            </a>
+                <span class="icon is-small"><i class="far fa-trash-alt"></i></span></a>
         </div>
     </div>
 {% endmacro %}
