--- a/app/clients/templates/_client_list_item.html
+++ b/app/clients/templates/_client_list_item.html
@@ -1,8 +1,8 @@
 {% macro client_list_item(client) %}
     <div class="field has-addons has-addons-centered">
         <div class="control is-expanded is-overlay control-name-and-tel">
-            <a class="button is-info is-rounded is-outlined is-fullwidth is-small control-name-and-tel"
-               href="{{ url_for('appointments_bp.add_appointment', client_id=client.id) }}">
+            <a class="button is-rounded is-outlined is-fullwidth is-small control-name-and-tel"
+               href="{{ url_for('clients_bp.a_client', client_id=client.id) }}">
                 <span class="icon"><i class="fas fa-user"></i></span>
                 <span>{{ client.name }} {{ client.phone }}</span>
             </a>
@@ -49,7 +49,6 @@
           <span class="icon is-small">
             <i class="fas fa-edit"></i>
           </span>
-                <span>Uredi</span>
             </a>
         </div>
         <div class="control">
