--- a/app/clients/templates/_client_list_item.html
+++ b/app/clients/templates/_client_list_item.html
@@ -54,7 +54,7 @@
         <div class="control">
             <a class="button is-danger is-rounded is-small"
                href="{{ url_for('clients_bp.delete_client', client_id=client.id) }}"
-               onclick="return confirm('As zihr?');">
+               onclick="return confirm('Če zbrišeš stranko, bodo izbrisani tudi vsi njeni termini. Je to oki doki, smoki?');">
           <span class="icon is-small">
             <i class="far fa-trash-alt"></i>
           </span>
