--- a/app/clients/templates/add_client.html
+++ b/app/clients/templates/add_client.html
@@ -3,7 +3,18 @@
 {% block stylesheet %}
     <link rel="stylesheet" href="{{ url_for('.static', filename='clients.css') }}">
 {% endblock %}
-
+{% block navigation %}
+    {% if current_user.is_authenticated %}
+        <div class="buttons are-medium gumbi-navigacija mb-5">
+            <a href="{{ url_for('appointments_bp.appointments') }}"
+               class="button is-link is-outlined is-rounded">Termini</a>
+            <a href="{{ url_for('calendar_bp.calendar') }}"
+               class="button is-link is-outlined is-rounded">Koledar</a>
+            <a href="{{ url_for('clients_bp.clients') }}"
+               class="button is-link is-outlined is-rounded">Stranke</a>
+        </div>
+    {% endif %}
+{% endblock %}
 {% block content %}
     {% from "_input_text.html" import input_text %}
 
