--- a/app/appointments/templates/_appointment_past_timeline_item.html
+++ b/app/appointments/templates/_appointment_past_timeline_item.html
@@ -1,26 +1,25 @@
-{% macro client_appointment_item(appointment) %}
+{% macro appointment_past_timeline_item(appointment) %}
     <div class="field has-addons has-addons-centered">
 
         <div class="control is-overlay">
-            <a class="button is-small is-link"
+            <a class="button is-small is-dark"
                href="{{ url_for('appointments_bp.an_appointment', appointment_id = appointment.id) }}">
-                <span class="icon"><i class="fas fa-calendar"></i></span>
-                <span>   {{ appointment.time_of_appointment.strftime('%d/%m/%Y') }}</span>
                 <span class="icon"><i class="fas fa-clock"></i></span>
                 <span>{{ appointment.time_of_appointment.strftime('%H:%M') }}</span>
             </a>
         </div>
         <div class="control is-expanded is-overlay control-name-and-tel">
-            <a class="button is-rounded is-outlined is-fullwidth is-small control-name-and-tel"
+            <a class="button  is-outlined is-fullwidth is-small control-name-and-tel"
                href="{{ url_for('appointments_bp.an_appointment',appointment_id = appointment.id) }}">
-                <span>SMSi:</span>
+                <span class="icon"><i class="fas fa-user"></i></span>
+                <span>{{ appointment.client.name }}</span>
             </a>
         </div>
         <div class="control tooltip">
             {% if appointment.now_sms %}
                 {% for sent_sms in appointment.sent_texts %}
                     {% if sent_sms.sms_type_id == 1 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: green" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-check"></i></span>
                         </a>
                         <span class="tooltiptext">Takojšnji SMS prejet.</span>
@@ -28,24 +27,24 @@
                 {% endfor %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 1 %}
-                        <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">Takojšnji SMS še ni bil prejet.</span>
+                        <span class="tooltiptext">Takojšnji SMS ni bil prejet.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <a class="button is-rounded is-small" style="color: grey">
+                <a class="button  is-small" style="color: grey">
                     <span class="icon"><i class="fas fa-circle"></i></span>
                 </a>
-                <span class="tooltiptext">Takojšnjega smsa ne dobi.</span>
+                <span class="tooltiptext">Takojšnjega smsa se ne pošilja.</span>
             {% endif %}
         </div>
         <div class="control tooltip">
             {% if appointment.same_day_sms %}
                 {% for sent_sms in appointment.sent_texts %}
                     {% if sent_sms.sms_type_id == 2 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: green" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-check"></i></span>
                         </a>
                         <span class="tooltiptext">SMS na dan termina prejet.</span>
@@ -53,24 +52,24 @@
                 {% endfor %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 2 %}
-                        <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">SMS na dan termina še ni prejet.</span>
+                        <span class="tooltiptext">SMS na dan termina ni bil prejet.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <a class="button is-rounded is-small" style="color: grey">
+                <a class="button  is-small" style="color: grey">
                     <span class="icon"><i class="fas fa-circle"></i></span>
                 </a>
-                <span class="tooltiptext">SMS na dan termina ne bo poslan.</span>
+                <span class="tooltiptext">SMS na dan termina se ne pošilja.</span>
             {% endif %}
         </div>
         <div class="control tooltip">
             {% if appointment.day_before_sms %}
                 {% for sent_sms in appointment.sent_texts %}
                     {% if sent_sms.sms_type_id == 3 %}
-                        <a class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: green" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-check"></i></span>
                         </a>
                         <span class="tooltiptext">SMS dan pred terminom prejet.</span>
@@ -78,32 +77,19 @@
                 {% endfor %}
                 {% for unsent_sms in appointment.unsent_texts %}
                     {% if unsent_sms.sms_type_id == 3 %}
-                        <a class="button is-rounded is-small" style="color: red" data-tooltip="SMS isti dan">
+                        <a class="button  is-small" style="color: red" data-tooltip="SMS isti dan">
                             <span class="icon"><i class="fas fa-times"></i></span>
                         </a>
-                        <span class="tooltiptext">SMS dan pred terminom še ni prejet.</span>
+                        <span class="tooltiptext">SMS dan pred terminom ni bil prejet.</span>
                     {% endif %}
                 {% endfor %}
             {% else %}
-                <a class="button is-rounded is-small" style="color: grey">
+                <a class="button  is-small" style="color: grey">
                     <span class="icon"><i class="fas fa-circle"></i></span>
                 </a>
-                <span class="tooltiptext">SMS dan pred terminom ne bo poslan.</span>
+                <span class="tooltiptext">SMS dan pred terminom se ne pošilja.</span>
             {% endif %}
         </div>
-        <div class="control">
-            <a class="button is-success is-rounded is-outlined is-small"
-               href="{{ url_for('appointments_bp.update_appointment', appointment_id = appointment.id) }}">
-          <span class="icon is-small">
-            <i class="fas fa-edit"></i>
-          </span>
-            </a>
-        </div>
-        <div class="control">
-            <a class="button is-danger is-small"
-               href="{{ url_for('appointments_bp.delete_appointment', appointment_id=appointment.id) }}"
-               onclick="return confirm('As zihr?');">
-                <span class="icon is-small"><i class="far fa-trash-alt"></i></span></a>
-        </div>
+
     </div>
 {% endmacro %}
