--- a/app/appointments/templates/_appointment_timeline_item.html
+++ b/app/appointments/templates/_appointment_timeline_item.html
@@ -100,7 +100,7 @@
         </div>
         <div class="control">
             <a class="button is-danger is-rounded is-small"
-               href="{{ url_for('clients_bp.clients') }}"
+               href="{{ url_for('appointments_bp.delete_appointment', appointment_id = appointment.id) }}"
                onclick="return confirm('As zihr?');">
           <span class="icon is-small">
             <i class="far fa-trash-alt"></i>
