--- a/app/appointments/templates/timeline.html
+++ b/app/appointments/templates/timeline.html
@@ -16,32 +16,107 @@
 {% endblock %}
 {% block content %}
     {% from "_appointment_timeline_item.html" import appointment_timeline_item %}
+    {% from "_appointment_past_timeline_item.html" import appointment_past_timeline_item %}
     <div class="container is-max-desktop">
-        <div class="timeline">
-            {% for year in schedule %}
+        <div class="tabs is-toggle is-fullwidth" id="tabs">
+            <ul>
+                <li class="is-active" data-tab="1">
+                    <a>
+                        <span>Prihajajoči</span>
+                    </a>
+                </li>
+                <li data-tab="2">
+                    <a>
+                        <span class="icon is-small"><i class="fa fa-music"></i></span>
+                        <span>Pretekli</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div id="tab-content">
+            <div class="timeline is-active" data-content="1">
                 <header class="timeline-header">
-                    <span class="tag is-large is-link">{{ year }}</span>
+                    <span>Zob časa</span>
                 </header>
-                {% for month in schedule[year] %}
+                <header class="timeline-header">
+                    <span class="tag is-link is-medium"><i class="fa fa-chevron-down"></i></span>
+                </header>
+
+                <div class="timeline-item">
+                </div>
+                {% for year in schedule %}
                     <header class="timeline-header">
-                        <span class="tag is-danger">{{ month }}</span>
+                        <span class="tag is-large is-link">{{ year }}</span>
                     </header>
-                    {% for day in schedule[year][month] %}
-                        <div class="timeline-item">
-                            <div class="timeline-marker is-link"></div>
-                            <div class="timeline-content">
-                                <p class="heading">{{ day }}. {{ month }}</p>
-                                {% for appointment in appointment_list %}
-                                    {% if day == appointment.time_of_appointment.day and month == appointment.time_of_appointment.strftime('%B') and year == appointment.time_of_appointment.year %}
-                                        {{ appointment_timeline_item(appointment) }}
-                                    {% endif %}
-                                {% endfor %}
+                    {% for month in schedule[year] %}
+                        <header class="timeline-header">
+                            <span class="tag is-danger">{{ month }}</span>
+                        </header>
+                        {% for day in schedule[year][month] %}
+                            <div class="timeline-item">
+                                <div class="timeline-marker is-link"></div>
+                                <div class="timeline-content">
+                                    <p class="heading">{{ day }}. {{ month }}</p>
+                                    {% for appointment in appointment_list %}
+                                        {% if day == appointment.time_of_appointment.day and month == appointment.time_of_appointment.strftime('%B') and year == appointment.time_of_appointment.year %}
+                                            {{ appointment_timeline_item(appointment) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
-                        </div>
+                        {% endfor %}
                     {% endfor %}
                 {% endfor %}
-            {% endfor %}
+                <header class="timeline-header">
+                    <span>Zob časa</span>
+                </header>
+                <header class="timeline-header">
+                    <span class="tag is-link is-medium"><i class="fa fa-chevron-down"></i></span>
+                </header>
+            </div>
+            <div class="timeline" data-content="2">
+                <header class="timeline-header">
+                    <span class="tag is-dark is-medium"><i class="fa fa-chevron-up"></i></span>
+                </header>
+                <header class="timeline-header">
+                    <span>Zob časa</span>
+                </header>
+                <div class="timeline-item">
+                </div>
+                {% for year in past_schedule %}
+                    <header class="timeline-header">
+                        <span class="tag is-large is-dark">{{ year }}</span>
+                    </header>
+                    {% for month in past_schedule[year] %}
+                        <header class="timeline-header">
+                            <span class="tag has-background-grey has-text-white">{{ month }}</span>
+                        </header>
+                        {% for day in past_schedule[year][month] %}
+                            <div class="timeline-item">
+                                <div class="timeline-marker has-background-grey has-text-white"></div>
+                                <div class="timeline-content">
+                                    <p class="heading">{{ day }}. {{ month }}</p>
+                                    {% for appointment in past_appointment_list %}
+                                        {% if day == appointment.time_of_appointment.day and month == appointment.time_of_appointment.strftime('%B') and year == appointment.time_of_appointment.year %}
+                                            {{ appointment_past_timeline_item(appointment) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                {% endfor %}
+                <header class="timeline-header">
+                    <span class="tag is-dark is-medium"><i class="fa fa-chevron-up"></i></span>
+                </header>
+                <header class="timeline-header">
+                    <span>Zob časa</span>
+                </header>
+            </div>
         </div>
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{{ url_for('.static', filename='timelineTabs.js') }}"></script>
 {% endblock %}
 
